welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:9: error: value === is not a member of Int
 		i===indice_valeur_max	
                 ^